@@ -1,4 +1,4 @@
-/* Copyright (C) 2000, 2002, 2003, 2004 Free Software Foundation, Inc.
+/* Copyright (C) 2000, 2002, 2003, 2004, 2007 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Jakub Jelinek <jakub@redhat.com>, 2000.
 
@@ -149,5 +149,8 @@
 })
 
 
+#ifdef __ASSEMBLER__
+# define JUMPTARGET(sym) sym
+#endif
 
 #endif /* _LINUX_SPARC_SYSDEP_H */
